<resources>
    <string name="app_name">Мої відрядження</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="leaveTime">Дата/Час виїзду</string>
    <string name="drivers">Водії</string>
    <string name="route">Маршрут</string>
    <string name="save">Зберегти</string>
    <string name="point">Точка</string>
    <string name="pointN">Точка #</string>
    <string name="arriveDateTime">Дата/час прибуття</string>
    <string name="product">Продукція</string>
    <string name="weightAdd">Додати вагу</string>
    <string name="net">Нетто</string>
    <string name="tare">Тара</string>
    <string name="gross">Брутто</string>
    <string name="add">Додати</string>
    <string name="clear">Очистити</string>
    <string name="references">Довідники</string>
    <string name="ok">OK</string>
    <string name="cancel">Відмінити</string>
    <string name="wifi_connected">Підключення по ВіФі</string>
    <string name="any_connected">Інтернет підключений</string>
    <string name="lost_connection">Втрата з’єднання</string>
    <string name="routeEdit">Маршрут</string>
    <string name="sweet_home">Бездрик</string>
    <string name="give">Передано</string>
    <string name="discarded">Отримано</string>
    <string name="B">"Б: "</string>
    <string name="T">"Т: "</string>
    <string name="N">"Н: "</string>
    <string name="login">Номер телефону</string>
    <string name="password">Пароль</string>
    <string name="enter">Вхід</string>
    <string name="alreadyLogin">Авторизація не потрібна</string>
    <string name="removeToken">Видалити дані користувача</string>
    <string name="pressBack">Для виходу жми Назад ще раз</string>
    <string name="expenses_description">Опис</string>
    <string name="expenses_amount">Сума</string>
    <string name="expenses_title">Додаткові</string>
    <string name="edit">Редагування</string>
    <string name="delete">Видалити</string>
    <string name="close">Закрити</string>
    <string name="check">✓</string>
    <string name="notes">Примітки до відрядження</string>
    <string name="done">Завершено</string>
    <string name="report_done">Завершити відрядження</string>
    <string name="patronymic">По-батькові</string>
    <string name="phones">Телефони</string>
    <string name="title_location_permission">Геодані</string>
    <string name="message_location_permission">Для кращої роботи програми потрібен дозвіл на доступ до геоданих пристрою</string>
    <string name="done_date">Відрядження завершено:</string>
    <string name="date_template">--.--.--</string>
    <string name="time_template">--:--</string>
    <string name="fare">Проїзд</string>
    <string name="expanses">Витрати</string>
    <string name="route_edit">Редагувати маршрут</string>
    <string name="fares">Проїзд</string>
    <string name="fixLeaveTime">Зафіксувати час виїзду</string>
    <string name="done_report_title">Завершення відрядження</string>
    <string name="done_report_message">Встановити наступну дату завершення відрядження?</string>
    <string name="no_title">Не всі обов’язкові поля заповнені</string>
    <string name="fields">Точки відвантаження</string>
    <string name="surname">Прізвище</string>
    <string name="forename">Ім’я</string>
    <string name="phones_edit_title">Редагування телефонів</string>
    <string name="show_title">Перегляд</string>
    <string name="weight">Вага</string>
    <string name="ownWeight">Вага на заводі</string>
    <string name="ownWeightAdd">Додати вагу на заводі</string>
    <string name="weightTitle">Редагування ваги</string>
    <string name="copy">Копіювати</string>
    <string name="fixArriveTime">Зафіксувати час прибуття</string>
    <string name="sync">Синхронізація</string>
    <string name="syncList">Синхронізації</string>
    <string name="sync_question">Синхронізувати дані з сервером перед початком роботи?</string>
    <string name="yes">Так</string>
    <string name="no">Ні</string>
    <string name="Y">Y</string>
    <string name="plus">+</string>
    <string name="driver_add">Додати водія</string>
    <string name="times">✕</string>
    <string name="press_for_driver">Натисніть для редагування</string>
    <string name="driver_add_info">Додати інформацію про водія</string>
    <string name="detail_edit_title">Дані перевезення</string>
    <string name="long_string">ABSDEFGHIJKLMNOPQRSTUVWXYZ0123456789!@#$%^*</string>
    <string name="sync_products">Завантаження продукції</string>
    <string name="sync_drivers">Завантаження списку водіїв</string>
    <string name="sync_success">Синхронізація пройшла успішно</string>
    <string name="sync_error">Помилка синхронізації</string>
    <string name="sync_counterparty">Завантаження списку контрагентів</string>
    <string name="driver_edit">Редагування водія</string>
    <string name="remove_report">✕ Видалити звіт</string>
    <string name="insert_driver_name">Введіть ім’я водія</string>
    <string name="remove_title">Видалення</string>
    <string name="remove_report_message">Бажаєте видалити звіт?</string>
    <string name="report_remove_success">Звіт видалено</string>
    <string name="press_for_weight">Вага не вказана</string>
    <string name="tables">DB View</string>
    <string name="counterparty">Контрагент</string>
    <string name="newCounterparty">+ Новий контрагент</string>
    <string name="counterpartyWeight">Вага контрагента</string>
    <string name="save_status">Статус збереження</string>
    <string name="sync_title">Синхронізація</string>
    <string name="press_for_open">Торкніться щоб відкрити</string>
    <string name="driver_edit_attention">Увага! Цей діалог призначений для редагування
        некоректних даних уже збереженого в базі водія.</string>
    <string name="newDriver">Додати нового водія</string>
    <string name="route_hint">Введіть назву міста</string>
    <string name="add_point">Додати точку відвантаження</string>
    <string name="json_error">Некоректний формат відповіді</string>
    <string name="attention">Увага!</string>
    <string name="alert_active_report_text">Для створення нового відрядження необхідно завершити попереднє.</string>
    <string name="alert_active_report_text_ps">Також попереднє відрядження можна видалити.</string>
    <string name="alert">Alert</string>
    <string name="open_report">Відкрити звіт</string>
    <string name="points">Точки відвантаження</string>
    <string name="location">Location</string>
</resources>
