<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activity.Reports">
    <item
        android:id="@+id/save"
        android:icon="@android:drawable/ic_menu_save"
        android:title="@string/save"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/cancel"
        android:icon="@android:drawable/ic_menu_close_clear_cancel"
        android:title="@string/close"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/weight"
        android:icon="@drawable/ic_weight"
        android:title="@string/ownWeight"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/done"
        android:icon="@android:drawable/checkbox_on_background"
        android:title="@string/report_done"
        app:showAsAction="ifRoom" />
</menu>