<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activity.Reports">

    <item
        android:id="@+id/login"
        android:icon="@android:drawable/ic_secure"
        android:title="@string/enter"
        app:showAsAction="never" />
    <item
        android:id="@+id/add"
        android:icon="@android:drawable/ic_menu_add"
        app:showAsAction="ifRoom"
        android:title="@string/add"/>
    <item
        android:id="@+id/references"
        app:showAsAction="never"
        android:title="@string/references"/>
    <item
        android:id="@+id/versionCode"
        android:title=""
        app:showAsAction="never"/>
</menu>